--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ python = ">=3.7,<3.11"
 zarr = "^2.10.3"
 "ruamel.yaml" = "^0.17.20"
 valida = {path = "../valida", develop = true}
+click = "^8.0.4"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.12.2"
@@ -24,6 +25,9 @@ pytest = "^6.2.5"
 commitizen = "^2.20.3"
 pre-commit = "^2.16.0"
 black = "^21.12b0"
+
+[tool.poetry.scripts]
+hpcflow = 'hpcflow.cli:cli'
 
 [tool.commitizen]
 name = "cz_conventional_commits"
