--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,8 @@ include = [
 python = ">=3.7,<3.11"
 zarr = "^2.10.3"
 "ruamel.yaml" = "^0.17.20"
-valida = {path = "../valida", develop = true}
 click = "^8.0.4"
+valida = "^0.2.0"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.12.2"
