build: update GH workflows

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 name: deploy
 on:
   workflow_run:
-    workflows: [Test]
+    workflows: [test]
     types: [completed]
   workflow_dispatch:
   push:
