build: update GH workflows

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,11 +1,12 @@
 name: deploy
+
 on:
+  workflow_dispatch: # manual
   workflow_run:
     workflows: [test]
     types: [completed]
-  workflow_dispatch:
-  push:
     branches: [main, develop]
+
 jobs:
   bump-version:
     if:
