--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,4 +40,4 @@ jobs:
 
       - name: Run tests
         run: | # disable failing tests while we set up CI
-          poetry run python -m pytest --verbose --exitfirst -k not task_schema and not task_template and not resolve_elements and not input_value and not action
+          poetry run python -m pytest --verbose --exitfirst -k "not task_schema and not task_template and not resolve_elements and not input_value and not action"
