--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ pytest = "^6.2.5"
 commitizen = "^2.20.3"
 pre-commit = "^2.16.0"
 black = "^21.12b0"
+pyinstaller = "^4.9"
 
 [tool.poetry.scripts]
 hpcflow = 'hpcflow.cli:cli'
