--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0 # get all history and tags
+          ref: ${{ github.event.workflow_run.head_branch }} # use same branch as the triggering event?
 
       - run: |
           git config user.name github-actions
