build: use secret in bump-version

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           fetch-depth: 0 # get all history and tags
           ref: ${{ github.event.workflow_run.head_branch }} # use same branch as the triggering event?
+          token: ${{ secrets.HPCFLOW_ACTIONS_TOKEN }}
 
       - run: |
           git config user.name github-actions
