--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       - run: |
           git config user.name hpcflow-actions
           git config user.email hpcflow-actions@users.noreply.github.com
-          git remote set-url origin https://{{ secrets.HPCFLOW_ACTIONS_TOKEN }}}@github.com/hpcflow/hpcflow-new.git/
+          git remote set-url origin https://${{ secrets.HPCFLOW_ACTIONS_TOKEN }}}@github.com/hpcflow/hpcflow-new.git/
 
       - uses: actions/setup-python@v2
         with:
