--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,12 +20,11 @@ jobs:
         with:
           fetch-depth: 0 # get all history and tags
           ref: ${{ github.event.workflow_run.head_branch }} # use same branch as the triggering event?
-          token: ${{ secrets.HPCFLOW_ACTIONS_TOKEN }}
+          token: ${{ secrets.HPCFLOW_ACTIONS_TOKEN }} # PAT of user who has permission to bypass branch protection
 
       - run: |
           git config user.name hpcflow-actions
           git config user.email hpcflow-actions@users.noreply.github.com
-          git remote set-url origin https://${{ secrets.HPCFLOW_ACTIONS_TOKEN }}}@github.com/hpcflow/hpcflow-new.git/
 
       - uses: actions/setup-python@v2
         with:
