build stop test workflow on bump commit

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,7 @@ name: test
 on:
   workflow_dispatch: # manual
   push: # on any branch
+    paths-ignore: [CHANGELOG.md] # ignore push from bump-version in deploy workflow
 
 jobs:
   test:
