--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ version = "0.12.0"
 tag_format = "v$version"
 version_files = [ 
     "pyproject.toml:version",
-    "hpcflow/__init__.py"
+    "hpcflow/_version.py"
 ]
 
 [build-system]
