--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,12 @@ name: test
 on:
   workflow_dispatch: # manual
   push: # on any branch
-    paths-ignore: [CHANGELOG.md, pyproject.toml, hpcflow/_version.py] # ignore push from bump-version in deploy workflow
+    paths-ignore: [
+        CHANGELOG.md,
+        pyproject.toml,
+        hpcflow/_version.py,
+        .github/workflows/*,
+      ] # ignore push from bump-version in deploy workflow
 
 jobs:
   printInfo:
