--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0 # get all history and tags
-          ref: ${{ github.event.workflow_run.head_branch }} # use same branch as the triggering event?
+          ref: refs/heads/${{ github.event.workflow_run.head_branch }} # use same branch as the triggering event?
           token: ${{ secrets.HPCFLOW_ACTIONS_TOKEN }} # PAT of user who has permission to bypass branch protection
 
       - run: |
@@ -28,6 +28,7 @@ jobs:
           git config user.email hpcflow-actions@users.noreply.github.com
           echo ${{ github.event.workflow_run.head_branch }}
           echo ${{ github.ref }}
+          echo ${{git branch}}
 
       # - uses: actions/setup-python@v2
       #   with:
