--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,8 +11,10 @@ jobs:
   bump-version:
     if:
       | # only deploy if tests succeeded and only from develop (as pre-release) or main (as stable):
-      github.event.workflow_run.conclusion == 'success'
-      && (github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/main')
+      if github.event_name == workflow_run && (
+        github.event.workflow_run.conclusion == 'success'
+        && (github.event.workflow_run.head_branch == 'develop' || github.event.workflow_run.head_branch == 'main')
+      )
     runs-on: ubuntu-latest
     outputs:
       new_tag_name: ${{ steps.get_new_tag.outputs.new_tag_name }}
@@ -48,11 +50,11 @@ jobs:
       #     echo "cur_tag=$CUR_TAG" >> $GITHUB_ENV
 
       # - name: Commitizen bump (pre-release) # Bump version strings (pre-release) and add a new tag; commit
-      #   if: github.ref == 'refs/heads/develop'
+      #   if: github.event.workflow_run.head_branch == 'develop'
       #   run: cz bump --prerelease alpha
 
       # - name: Commitizen bump # Bump version strings and add a new tag; commit
-      #   if: github.ref == 'refs/heads/main'
+      #   if: github.event.workflow_run.head_branch == 'main'
       #   run: cz bump
 
       # - name: Get new tag
