--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
       github.event_name == 'workflow_run' && (
         github.event.workflow_run.conclusion == 'success'
         && (github.event.workflow_run.head_branch == 'develop' || github.event.workflow_run.head_branch == 'main')
-      )
+      ) || github.event_name == 'workflow_dispatch' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop')
     runs-on: ubuntu-latest
     outputs:
       new_tag_name: ${{ steps.get_new_tag.outputs.new_tag_name }}
