--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ version_files = [
     "pyproject.toml:version",
     "hpcflow/_version.py"
 ]
-bump_message = "bump: $current_version → $new_version [skip-ci]"
+bump_message = "bump: $current_version → $new_version [skip ci]"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
