--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,12 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.HPCFLOW_ACTIONS_TOKEN }} # PAT of user who has permission to bypass branch protection
+
+      - run: |
+          git config user.name hpcflow-actions
+          git config user.email hpcflow-actions@users.noreply.github.com
 
       - uses: actions/setup-python@v2
         with:
@@ -38,3 +44,9 @@ jobs:
       - name: Run tests
         run: | # disable failing tests while we set up CI
           poetry run python -m pytest --verbose --exitfirst -k "not task_schema and not task_template and not resolve_elements and not input_value and not action"
+
+      - name: pre-commit
+        run: |
+          install pre-commit
+          pre-commit run --all-files
+          git diff --quiet; if [ $? -eq 1 ]; then git commit -am "[skip ci] pre-commit fixes"; fi;
