--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,6 +47,6 @@ jobs:
 
       - name: pre-commit
         run: |
-          install pre-commit
+          pre-commit install 
           pre-commit run --all-files
           git diff --quiet; if [ $? -eq 1 ]; then git commit -am "[skip ci] pre-commit fixes"; fi;
