--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           pip install pre-commit
           pre-commit install 
-          (pre-commit run --all-files) || true
+          python -c "from subprocess import run; run('pre-commit run --all-files', shell=True);"
           git diff --quiet; if [ $? -eq 1 ]; then git commit -am "[skip ci] pre-commit fixes"; fi;
 
   test:
