--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,9 @@ jobs:
           pip install pre-commit
           pre-commit install 
           pre-commit run --all-files || pre-commit run --all-files
+
+      - name: pre-commit push changes
+        run: |
           git diff --quiet; if [ $? -eq 1 ]; then git commit -am "[skip ci] pre-commit fixes"; fi;
 
   test:
