--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,6 +32,7 @@ jobs:
             echo "No pre-commit changes"
           else
             git commit -am "[skip ci] pre-commit fixes"
+            git push
           fi
 
   test:
