--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           pip install pre-commit
           pre-commit install 
-          pre-commit run --all-files
+          pre-commit run --all-files || pre-commit run --all-files
 
       - name: pre-commit push changes
         run: |
