--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,7 @@ jobs:
         run: | # avoid exit code 1 from pre-commit run command:
           pip install pre-commit
           pre-commit install 
+          export SKIP=no-commit-to-branch
           pre-commit run --all-files || pre-commit run --all-files
 
       - name: pre commit push changes
