--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          token: ${{ secrets.HPCFLOW_ACTIONS_TOKEN }} # PAT of user who has permission to bypass branch protection
+          token: ${{ secrets.HPCFLOW_ACTIONS_TOKEN }} # PAT of user (hpcflow-actions) who has permission to bypass branch protection
 
       - run: |
           git config user.name hpcflow-actions
@@ -21,22 +21,24 @@ jobs:
           python-version: 3.9
 
       - name: pre-commit
-        run: | # avoid exit code 1 from pre-commit run command:
+        run:
+          | # avoid exit code 1 (which halts GH actions) from pre-commit run command by running twice:
           pip install pre-commit
           pre-commit install 
           export SKIP=no-commit-to-branch
           pre-commit run --all-files || pre-commit run --all-files
 
-      - name: pre commit push changes
+      - name: pre-commit push changes
         run: |
           if git diff --quiet; then
-            echo "No pre commit changes"
+            echo "No pre-commit changes"
           else
-            git commit -am "[skip ci] pre commit fixes"
+            git commit -am "pre-commit fixes [skip ci]"
             git push
           fi
 
   test:
+    # TODO: depend on pre-commit, and then checkout using github.ref I think?
     strategy:
       fail-fast: false
       matrix:
