--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,8 @@ jobs:
 
       - name: Manipulate tags (stable release)
         if: github.event.workflow_run.head_branch == 'main'
-        run: | # delete all pre-release tags
+        run:
+          | # delete all pre-release tags, set current version to the latest stable release,
           git tag -l
           git tag -l | awk '/^(v[0-9]+\.[0-9]+\.[0-9]+(a|b|rc).*)$/ {print $1}' | xargs git tag -d
           git tag -l
@@ -50,9 +51,11 @@ jobs:
         if: github.event.workflow_run.head_branch == 'develop'
         run: cz bump --prerelease alpha
 
-      - name: Commitizen bump # Bump version strings and add a new tag; commit
+      - name: Commitizen bump # First "bump" to latest stable release, then bump to new stable release, add a new tag and commit
         if: github.event.workflow_run.head_branch == 'main'
-        run: cz bump
+        run: |
+          cz bump --increment ${{ env.cur_tag }}
+          cz bump
 
       - name: Get new tag
         id: get_new_tag
