--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,6 +45,7 @@ jobs:
       - name: Get current tag
         run: |
           CUR_TAG=$(git describe --tags $(git rev-list --tags --max-count=1))
+          echo "CUR_TAG is: $CUR_TAG"
           echo "cur_tag=$CUR_TAG" >> $GITHUB_ENV
 
       - name: Commitizen bump (pre-release) # Bump version strings (pre-release) and add a new tag; commit
@@ -61,6 +62,7 @@ jobs:
         id: get_new_tag
         run: |
           NEW_TAG=$(git describe --tags $(git rev-list --tags --max-count=1))
+          echo "NEW_TAG is: $NEW_TAG"
           echo "new_tag=$NEW_TAG" >> $GITHUB_ENV
           echo "::set-output name=new_tag_name::$NEW_TAG"
 
