--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,10 +69,20 @@ jobs:
           echo "new_tag=$NEW_TAG" >> $GITHUB_ENV
           echo "::set-output name=new_tag_name::$NEW_TAG"
 
-      - name: Generate CHANGELOG and push
+      - name: Generate CHANGELOG (stable release)
+        if: github.event.workflow_run.head_branch == 'main'
         run: |
           ./git-chglog --output CHANGELOG.md
           git add CHANGELOG.md
+
+      - name: Generate CHANGELOG (pre-release)
+        if: github.event.workflow_run.head_branch == 'develop'
+        run: |
+          ./git-chglog --output CHANGELOG-dev.md
+          git add CHANGELOG-dev.md
+
+      - name: Push new CHANGELOG
+        run: |
           git tag -d ${{ env.new_tag }}
           git commit --amend --no-edit
           git tag ${{ env.new_tag }}
