--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -114,17 +114,18 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-2019, ubuntu-18.04, macos-10.15]
+        #os: [windows-2019, ubuntu-18.04, macos-10.15]
+        os: [ubuntu-18.04]
         include:
-          - os: windows-2019
-            executable_ext: .exe
-            executable_os: win
+          # - os: windows-2019
+          #   executable_ext: .exe
+          #   executable_os: win
           - os: ubuntu-18.04
             executable_ext: ""
             executable_os: linux
-          - os: macos-10.15
-            executable_ext: ""
-            executable_os: macos
+          # - os: macos-10.15
+          #   executable_ext: ""
+          #   executable_os: macos
 
     runs-on: ${{ matrix.os }}
     steps:
