--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -88,16 +88,16 @@ jobs:
           git tag ${{ env.new_tag }}
           git push && git push origin ${{ env.new_tag }}
 
-      - name: Merge to develop (stable release)
-        if: github.event.workflow_run.head_branch == 'main'
-        run: |
-          export SKIP=end-of-file-fixer
-          git checkout develop
-          git pull
-          git merge main
-          git checkout --theirs .\pyproject.toml .\hpcflow\_version.py
-          git commit -am "merge main into develop [skip ci]"
-          git push
+      # - name: Merge to develop (stable release)
+      #   if: github.event.workflow_run.head_branch == 'main'
+      #   run: |
+      #     export SKIP=end-of-file-fixer
+      #     git checkout develop
+      #     git pull
+      #     git merge main
+      #     git checkout --theirs .\pyproject.toml .\hpcflow\_version.py
+      #     git commit -am "merge main into develop [skip ci]"
+      #     git push
 
       - name: Generate incremental CHANGELOG for GitHub release body
         run: |
