--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -91,7 +91,7 @@ jobs:
       - name: Merge to develop branch if exists (stable release)
         if: github.event.workflow_run.head_branch == 'main'
         run: |
-          if git rev-parse --quiet --verify develop > /dev/null; then
+          if [[ -z $(git branch --list develop) ]]; then
             export SKIP=end-of-file-fixer
             git checkout develop
             git pull
