build [skip ci]

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -91,15 +91,18 @@ jobs:
       - name: Merge to develop branch if exists (stable release)
         if: github.event.workflow_run.head_branch == 'main'
         run: |
-          if [[ -z $(git branch --list develop) ]]; then
-            echo "No develop branch to merge into."
-          else
+          git branch --list
+          exists_in_local=$(git branch --list develop)
+          echo "$exists_in_local"
+          if [[ -n $exists_in_local ]]; then
             export SKIP=end-of-file-fixer
             git checkout develop
             git pull
             git merge main
             git commit --amend -m "merge main into develop [skip ci]"
-            git push
+            git push                      
+          else
+            echo "No develop branch to merge into."
           fi
 
       - name: Generate incremental CHANGELOG for GitHub release body
