--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -101,9 +101,16 @@ jobs:
             echo "No develop branch to merge into."
           fi
 
-      - name: Generate incremental CHANGELOG for GitHub release body
+      - name: Generate incremental CHANGELOG for GitHub release body (stable release)
+        if: github.event.workflow_run.head_branch == 'main'
         run: |
           ./git-chglog --template .chglog/RELEASE.tpl.md --output CHANGELOG_increment.md ${{ env.cur_tag }}..
+          cat CHANGELOG_increment.md
+
+      - name: Generate incremental CHANGELOG for GitHub release body (pre-release)
+        if: github.event.workflow_run.head_branch == 'develop'
+        run: |
+          ./git-chglog --template .chglog/RELEASE.tpl.md --output CHANGELOG_increment.md ${{ env.new_tag }}
           cat CHANGELOG_increment.md
 
       - uses: actions/upload-artifact@v2
