--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,7 +13,7 @@ repos:
       - id: mixed-line-ending
         args: [--fix=lf]
       - id: no-commit-to-branch
-        args: [--branch=main]
+        args: [--branch=main --branch=develop]
         exclude: |
           (?x)^(
             CHANGELOG.md|
