build [skip ci]

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,13 @@
 name: deploy
 
 on:
-  workflow_run:
-    workflows: [test]
-    types: [completed]
+  pull_request:
     branches: [main, develop]
+    types: [closed]
 
 jobs:
   bump-version:
+    if: github.event.pull_request.merged
     runs-on: ubuntu-latest
     outputs:
       new_tag_name: ${{ steps.get_new_tag.outputs.new_tag_name }}
@@ -15,7 +15,8 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0 # get all history and tags
-          ref: refs/heads/${{ github.event.workflow_run.head_branch }} # use same branch as the triggering event?
+          # ref: refs/heads/${{ github.event.workflow_run.head_branch }} # use same branch as the triggering event?
+          ref: ${{ github.event.pull_request.head.sha }}
           token: ${{ secrets.HPCFLOW_ACTIONS_TOKEN }} # PAT of user who has permission to bypass branch protection
 
       - run: |
@@ -34,8 +35,8 @@ jobs:
       - name: Install commitizen
         run: pip install commitizen
 
-      - name: Manipulate tags (stable release) # TODO: maybe first change develop branch to match new main version?
-        if: github.event.workflow_run.head_branch == 'main'
+      - name: Manipulate tags (stable release)
+        if: github.event.pull_request.base.ref == 'main'
         run:
           | # delete all pre-release tags, set current version to the latest stable release,
           CUR_PRE_TAG=$(git describe --tags $(git rev-list --tags --max-count=1))
@@ -50,11 +51,11 @@ jobs:
           echo "cur_tag=$CUR_TAG" >> $GITHUB_ENV
 
       - name: Commitizen bump (pre-release) # Bump version strings (pre-release) and add a new tag; commit
-        if: github.event.workflow_run.head_branch == 'develop'
+        if: github.event.pull_request.base.ref == 'develop'
         run: cz bump --prerelease alpha
 
       - name: Commitizen bump # First update version number to latest stable release, then bump to new stable release, add a new tag and commit
-        if: github.event.workflow_run.head_branch == 'main'
+        if: github.event.pull_request.base.ref == 'main'
         run: |
           python update_main_version.py ${{ env.cur_pre_tag }} ${{ env.cur_tag }}
           cz bump
@@ -68,13 +69,13 @@ jobs:
           echo "::set-output name=new_tag_name::$NEW_TAG"
 
       - name: Generate CHANGELOG (stable release)
-        if: github.event.workflow_run.head_branch == 'main'
+        if: github.event.pull_request.base.ref == 'main'
         run: |
           ./git-chglog --output CHANGELOG.md
           git add CHANGELOG.md
 
       - name: Generate CHANGELOG-dev (pre-release)
-        if: github.event.workflow_run.head_branch == 'develop'
+        if: github.event.pull_request.base.ref == 'develop'
         run: |
           ./git-chglog --output CHANGELOG-dev.md
           git add CHANGELOG-dev.md
@@ -87,7 +88,7 @@ jobs:
           git push && git push origin ${{ env.new_tag }}
 
       - name: Merge to develop branch if exists (stable release)
-        if: github.event.workflow_run.head_branch == 'main'
+        if: github.event.pull_request.base.ref == 'main'
         run: |
           exists_in_remote=$(git ls-remote --heads origin develop)
           echo "exists_in_remote: $exists_in_remote"
@@ -102,13 +103,13 @@ jobs:
           fi
 
       - name: Generate incremental CHANGELOG for GitHub release body (stable release)
-        if: github.event.workflow_run.head_branch == 'main'
+        if: github.event.pull_request.base.ref == 'main'
         run: |
           ./git-chglog --template .chglog/RELEASE.tpl.md --output CHANGELOG_increment.md ${{ env.cur_tag }}..
           cat CHANGELOG_increment.md
 
       - name: Generate incremental CHANGELOG for GitHub release body (pre-release)
-        if: github.event.workflow_run.head_branch == 'develop'
+        if: github.event.pull_request.base.ref == 'develop'
         run: |
           ./git-chglog --template .chglog/RELEASE.tpl.md --output CHANGELOG_increment.md ${{ env.new_tag }}
           cat CHANGELOG_increment.md
@@ -140,7 +141,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          ref: refs/heads/${{ github.event.workflow_run.head_branch }} # otherwise we get the ref when the workflow started (missing above commit)
+          ref: ${{ github.event.pull_request.head.sha }} # otherwise we get the ref when the workflow started (missing above commit)
 
       - uses: actions/setup-python@v2
         with:
@@ -181,7 +182,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          ref: refs/heads/${{ github.event.workflow_run.head_branch }} # otherwise we get the ref when the workflow started (missing above commit)
+          ref: ${{ github.event.pull_request.head.sha }} # otherwise we get the ref when the workflow started (missing above commit)
 
       - uses: actions/setup-python@v2
         with:
@@ -219,7 +220,7 @@ jobs:
           body_path: release-artifacts/CHANGELOG_increment/CHANGELOG_increment.md
           tag_name: ${{ needs.bump-version.outputs.new_tag_name }}
           files: release-artifacts/hpcflow-*/*
-          prerelease: ${{ github.event.workflow_run.head_branch == 'develop' }}
+          prerelease: ${{ github.event.pull_request.base.ref == 'develop' }}
 
       - name: Publish (to test PyPI)
         run: |
