--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 name: deploy
 
 on:
-  pull_request:
+  pull_request_target:
     branches: [main, develop]
     types: [closed]
 
@@ -15,7 +15,6 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0 # get all history and tags
-          # ref: refs/heads/${{ github.event.workflow_run.head_branch }} # use same branch as the triggering event?
           ref: ${{ github.event.pull_request.base.ref }}
           token: ${{ secrets.HPCFLOW_ACTIONS_TOKEN }} # PAT of user who has permission to bypass branch protection
 
