--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,6 +24,12 @@ repos:
     rev: 19.3b0
     hooks:
       - id: black
+  - repo: https://github.com/compilerla/conventional-pre-commit
+    rev: v1.2.0
+    hooks:
+      - id: conventional-pre-commit
+        stages: [commit-msg]
+        args: [] # optional: list of Conventional Commits types to allow
 ci:
   autofix_commit_msg: |
     [pre-commit.ci] [skip ci] auto fixes from pre-commit.com hooks
