--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          token: ${{ secrets.HPCFLOW_ACTIONS_TOKEN || secrets.GITHUB_TOKEN }} # PAT of user (hpcflow-actions) who has permission to bypass branch protection
+          token: ${{ secrets.HPCFLOW_ACTIONS_TOKEN || secrets.GITHUB_TOKEN }} # PAT of user (hpcflow-actions) who has permission to bypass branch protection || or standard GITHUB_TOKEN if running on an external fork (won't be able to commit fixes)
 
       - run: |
           git config user.name hpcflow-actions
@@ -42,7 +42,7 @@ jobs:
           fi
 
   test:
-    # TODO: depend on pre-commit, and then checkout using github.ref I think?
+    needs: pre-commit
     strategy:
       fail-fast: false
       matrix:
@@ -52,6 +52,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.ref }}
 
       - uses: actions/setup-python@v2
         with:
