--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -146,17 +146,17 @@ jobs:
         with:
           python-version: 3.9
 
+      - name: Cache the virtualenv
+        uses: actions/cache@v2
+        with:
+          path: ./.venv
+          key: venv-${{ matrix.os }}-${{ hashFiles('**/poetry.lock') }}
+
       - name: Install poetry
         run: python -m pip install poetry==1.1.11
 
       - name: Configure poetry
         run: poetry config virtualenvs.in-project true
-
-      - name: Cache the virtualenv
-        uses: actions/cache@v2
-        with:
-          path: ./.venv
-          key: venv-${{ hashFiles('**/poetry.lock') }}
 
       - name: Install dependencies
         run: poetry install
@@ -175,6 +175,39 @@ jobs:
       - name: Basic executable test
         run: dist/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}${{ matrix.executable_ext }} --version
 
+  build-executables-CentOS:
+    runs-on: ubuntu-latest
+    needs: bump-version
+    container:
+      image: aplowman/centos7-poetry
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Configure poetry
+        run: poetry config virtualenvs.in-project true
+
+      - name: Cache the virtualenv
+        uses: actions/cache@v2
+        with:
+          path: ./.venv
+          key: venv-CentOS-${{ hashFiles('**/poetry.lock') }}
+
+      - name: Install dependencies
+        run: |
+          poetry install
+          ls -la
+
+      - name: Build with pyinstaller for ${{matrix.executable_os}}
+        run: poetry run pyinstaller hpcflow/cli.py --name=hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-CentOS --onefile
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-CentOS
+          path: dist/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-CentOS
+
+      - name: Basic executable test
+        run: dist/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-CentOS --version
+
   release-github-PyPI:
     needs: [bump-version, build-executables]
     runs-on: ubuntu-latest
@@ -186,6 +219,12 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.9
+
+      - name: Cache the virtualenv
+        uses: actions/cache@v2
+        with:
+          path: ./.venv
+          key: venv-${{ hashFiles('**/poetry.lock') }}
 
       - name: Install poetry
         run: python -m pip install poetry==1.1.11
