--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   bump-version:
-    if: github.event.pull_request.merged
+    if: github.event.pull_request.merged && ! contains(github.event.pull_request.title, "[skip deploy]")
     runs-on: ubuntu-latest
     outputs:
       new_tag_name: ${{ steps.get_new_tag.outputs.new_tag_name }}
