--- a/.github/workflows/build-exes.yml
+++ b/.github/workflows/build-exes.yml
@@ -31,17 +31,17 @@ jobs:
         with:
           python-version: 3.9
 
+      - name: Cache the virtualenv
+        uses: actions/cache@v2
+        with:
+          path: ./.venv
+          key: venv-${{ matrix.os }}-${{ hashFiles('**/poetry.lock') }}
+
       - name: Install poetry
         run: python -m pip install poetry==1.1.11
 
       - name: Configure poetry
         run: poetry config virtualenvs.in-project true
-
-      - name: Cache the virtualenv
-        uses: actions/cache@v2
-        with:
-          path: ./.venv
-          key: venv-${{ hashFiles('**/poetry.lock') }}
 
       - name: Install dependencies
         run: poetry install
@@ -65,3 +65,37 @@ jobs:
 
       - name: Basic executable test
         run: dist/hpcflow-${{ env.vers }}-${{ matrix.executable_os }}${{ matrix.executable_ext }} --version
+
+  build-executables-CentOS:
+    runs-on: ubuntu-latest
+    needs: bump-version
+    container:
+      image: aplowman/centos7-poetry
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.pull_request.base.ref }} # otherwise we get the ref when the workflow started (missing above commit)
+
+      - name: Configure poetry
+        run: poetry config virtualenvs.in-project true
+
+      - name: Cache the virtualenv
+        uses: actions/cache@v2
+        with:
+          path: ./.venv
+          key: venv-CentOS-${{ hashFiles('**/poetry.lock') }}
+
+      - name: Install dependencies
+        run: |
+          poetry install
+
+      - name: Build with pyinstaller for ${{matrix.executable_os}}
+        run: poetry run pyinstaller hpcflow/cli.py --name=hpcflow-${{ env.vers }}-CentOS --onefile
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: hpcflow-${{ env.vers }}-CentOS
+          path: dist/hpcflow-${{ env.vers }}-CentOS
+
+      - name: Basic executable test
+        run: dist/hpcflow-${{ env.vers }}-CentOS --version
