--- a/.github/workflows/build-exes.yml
+++ b/.github/workflows/build-exes.yml
@@ -73,16 +73,16 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          ref: ${{ github.event.pull_request.base.ref }} # otherwise we get the ref when the workflow started (missing above commit)
+          fetch-depth: 0 # get all history and tags
 
       - name: Configure poetry
         run: poetry config virtualenvs.in-project true
 
-      # - name: Cache the virtualenv
-      #   uses: actions/cache@v2
-      #   with:
-      #     path: ./.venv
-      #     key: venv-CentOS-${{ hashFiles('**/poetry.lock') }}
+      - name: Cache the virtualenv
+        uses: actions/cache@v2
+        with:
+          path: ./.venv
+          key: venv-CentOS-${{ hashFiles('**/poetry.lock') }}
 
       - name: Install dependencies
         run: |
